--- a/notebooks/Advanced/CollectReinforcementData.ipynb
+++ b/notebooks/Advanced/CollectReinforcementData.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "d5994eed",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/CollectReinforcementData.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Advanced/CollectReinforcementData.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "456129de",
    "metadata": {
     "id": "AQMTpw5e_0cx"
    },
