--- a/notebooks/Advanced/SeekLight.ipynb
+++ b/notebooks/Advanced/SeekLight.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/SeekLight.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Advanced/SeekLight.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
@@ -95,7 +97,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -119,7 +121,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Range Sensor:'), Text(value='left-ir', description='Name:', layout=Layout(display=\u2026"
+       "VBox(children=(Label(value='Range Sensor:'), Text(value='left-ir', description='Name:', layout=Layout(display=…"
       ]
      },
      "metadata": {},
@@ -133,7 +135,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Range Sensor:'), Text(value='right-ir', description='Name:', layout=Layout(display\u2026"
+       "VBox(children=(Label(value='Range Sensor:'), Text(value='right-ir', description='Name:', layout=Layout(display…"
       ]
      },
      "metadata": {},
@@ -147,7 +149,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Light Sensor:'), Text(value='left-light', description='Name:', layout=Layout(displ\u2026"
+       "VBox(children=(Label(value='Light Sensor:'), Text(value='left-light', description='Name:', layout=Layout(displ…"
       ]
      },
      "metadata": {},
@@ -161,7 +163,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Label(value='Light Sensor:'), Text(value='right-light', description='Name:', layout=Layout(disp\u2026"
+       "VBox(children=(Label(value='Light Sensor:'), Text(value='right-light', description='Name:', layout=Layout(disp…"
       ]
      },
      "metadata": {},
