--- a/notebooks/Advanced/Subsumption.ipynb
+++ b/notebooks/Advanced/Subsumption.ipynb
@@ -2,12 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ab8a09e0",
    "metadata": {},
-   "source": "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Subsumption.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Advanced/Subsumption.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1e63bb3e",
    "metadata": {
     "id": "AQMTpw5e_0cx"
    },
@@ -18,6 +22,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3756de1d",
    "metadata": {},
    "source": [
     "# Subsumption Architecture\n",
@@ -28,6 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "d8a5ecee",
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "464be59e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "529c684d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "e10adb32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +179,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26b7de27",
    "metadata": {},
    "source": [
     "## Example: Find light\n",
@@ -180,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "0dd195b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,6 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "1638cc80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "0970e4a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,6 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "c9387178",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,6 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "f442d0e2",
    "metadata": {},
    "outputs": [
     {
@@ -289,6 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "a192f829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,6 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "54468dc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,6 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "ab0582ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "8a415bbf",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +358,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0\u2026"
+       "Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C\\x00\\x08\\x06\\x0…"
       ]
      },
      "metadata": {},
@@ -353,6 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "a05939d8",
    "metadata": {},
    "outputs": [
     {
@@ -377,6 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "463ff4b1",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +422,7 @@
        "version_minor": 0
       },
       "text/plain": [
-       "Player(children=(VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='Ti\u2026"
+       "Player(children=(VBox(children=(HBox(children=(FloatSlider(value=0.0, continuous_update=False, description='Ti…"
       ]
      },
      "metadata": {},
@@ -425,6 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff46216d",
    "metadata": {},
    "outputs": [],
    "source": []
