--- a/notebooks/Robotics/DemoRobots.ipynb
+++ b/notebooks/Robotics/DemoRobots.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Advanced/DemoRobots.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/Robotics/DemoRobots.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Demo of aitk.robots features\n",
+    "\n",
+    "This notebook is intended to demonstrate all of the key features of the aitk robots software. Let's create several robots with different capabilities and see how they interact in a small world. "
    ]
   },
   {
@@ -18,24 +27,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mERROR: Could not install packages due to an OSError: [Errno 13] Permission denied: 'WHEEL'\n",
-      "Check the permissions.\n",
-      "\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install aitk --upgrade --quiet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Demo of aitk.robots features\n",
-    "\n",
-    "Let's create several robots with different capabilities and see how they interact in a small world."
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -65,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random seed set to: 1045659\n"
+      "Random seed set to: 1521323\n"
      ]
     }
    ],
@@ -151,7 +148,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eea48205a3147c9ac856a0593f3cabe",
+       "model_id": "5d6fdb4550af46668a886c59da290963",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,6 +165,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pink robot's camera view\n",
+    "\n",
+    "The following code cell will show how the world looks through the pink robot's camera."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -175,7 +181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1732addb70f04de5a163e2dababf8571",
+       "model_id": "e09c0999caea4eea82268dd25a853400",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,7 +195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c5f0c09a9944038af00230ab4bc1503",
+       "model_id": "cb07b2e75db84bf7a317843d6d4801c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +209,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb023597fc8146feba47060a55305446",
+       "model_id": "90cc927ac8c4496a954089f5e4e862a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -217,7 +223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dc29a76f3cb498995625deed9b6a272",
+       "model_id": "c9c3e401cd49432c938731f38cf4caad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -343,6 +349,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simulate all robots simultaneously\n",
+    "\n",
+    "The following code block resets the world, and then starts all three robots off with their unique controllers. The simulation ends if the pink robot finds and eats the food, or if the yellow robot gets close enough to the light source, or if 40 seconds of real time have elapsed. Just scroll back up to the world view to see all the robos in action. \n",
+    "\n",
+    "You can rerun this code block as many times as you'd like and you should see different outcomes each time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -351,8 +368,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using random seed: 1045659\n",
-      "Using random seed: 0.8310109303846899\n"
+      "Using random seed: 1521323\n",
+      "Using random seed: 0.8102559104395679\n"
      ]
     },
     {
@@ -361,11 +378,11 @@
        "ascii": false,
        "bar_format": null,
        "colour": null,
-       "elapsed": 0.009370565414428711,
+       "elapsed": 0.007152080535888672,
        "initial": 0,
        "n": 0,
        "ncols": null,
-       "nrows": 72,
+       "nrows": 23,
        "postfix": null,
        "prefix": "",
        "rate": null,
@@ -375,7 +392,7 @@
        "unit_scale": false
       },
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c16413c2e5b143748b0a5d41c1bffc11",
+       "model_id": "601f6a9e90fd4157b459ea974241c301",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,7 +407,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simulation stopped at: 00:00:06.50; speed 0.97 x real time\n"
+      "Simulation stopped at: 00:00:06.30; speed 0.97 x real time\n"
      ]
     }
    ],
@@ -398,8 +415,22 @@
     "world.reset()\n",
     "robot2.state[\"timer\"] = 0 #reset the state variable\n",
     "world.set_seed(random())\n",
-    "world.seconds(40,[wander_ir,search_food,search_light],real_time=True)"
+    "world.seconds(40,[wander_ir, search_food, search_light],real_time=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -407,7 +438,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
