--- a/notebooks/Advanced/CompassAndBeacon.ipynb
+++ b/notebooks/Advanced/CompassAndBeacon.ipynb
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -208,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
