--- a/notebooks/Advanced/EvolvingRobotControl.ipynb
+++ b/notebooks/Advanced/EvolvingRobotControl.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -1013,8 +1013,8 @@
    "source": [
     "## 6. References\n",
     "\n",
-    "1. Turing\n",
-    "2. Holland"
+    "[1] Turing\n",
+    "[2] Holland"
    ]
   }
  ],
