--- a/notebooks/Advanced/MazeSearch.ipynb
+++ b/notebooks/Advanced/MazeSearch.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
