--- a/notebooks/Advanced/NoveltyCoverage.ipynb
+++ b/notebooks/Advanced/NoveltyCoverage.ipynb
@@ -8,17 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AQMTpw5e_0cx"
-   },
-   "outputs": [],
-   "source": [
-    "%pip install aitk --upgrade --quiet"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "V6THckODUGu6"
@@ -41,6 +30,25 @@
     "* `World`, `Scribbler`, `RangeSensor` from aitk.robots \n",
     "* `SimpleNetwork` from aitk.networks\n",
     "* And a few other support functions from our utilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "AQMTpw5e_0cx"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install aitk --quiet"
    ]
   },
   {
