--- a/notebooks/Advanced/RobotMemory.ipynb
+++ b/notebooks/Advanced/RobotMemory.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
