--- a/notebooks/GenerativeAI/NanoGPT.ipynb
+++ b/notebooks/GenerativeAI/NanoGPT.ipynb
@@ -126,7 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -1220,31 +1220,30 @@
     "id": "Dm-wNKRWNcf0"
    },
    "source": [
-    "[1] 3Blue1Brown. Attention in Transformers, Visually Explained | Chapter 6, Deep Learning. 2024. YouTube, https://www.youtube.com/watch?v=eMlx5fFNoYc.\n",
+    "[1] 3Blue1Brown, Attention in transformers, visually explained | Chapter 6, Deep Learning, (Apr. 07, 2024). Accessed: Jul. 23, 2024. [Online Video]. Available: https://www.youtube.com/watch?v=eMlx5fFNoYc\n",
     "\n",
-    "[2] 3Blue1Brown. But What Is a GPT?  Visual Intro to Transformers | Chapter 5, Deep Learning. 2024. YouTube, https://www.youtube.com/watch?v=wjZofJX0v4M.\n",
+    "[2] 3Blue1Brown, But what is a GPT?  Visual intro to transformers | Chapter 5, Deep Learning, (Apr. 01, 2024). Accessed: Jul. 23, 2024. [Online Video]. Available: https://www.youtube.com/watch?v=wjZofJX0v4M\n",
     "\n",
-    "[3] Andrej Karpathy. [1hr Talk] Intro to Large Language Models. 2023. YouTube, https://www.youtube.com/watch?v=zjkBMFhNj_g.\n",
+    "[3] Andrej Karpathy, [1hr Talk] Intro to Large Language Models, (Nov. 22, 2023). Accessed: Jul. 23, 2024. [Online Video]. Available: https://www.youtube.com/watch?v=zjkBMFhNj_g\n",
     "\n",
-    "[4] Andrej Karpathy. Let’s Build GPT: From Scratch, in Code, Spelled Out. 2023. YouTube, https://www.youtube.com/watch?v=kCc8FmEb1nY.\n",
+    "[4] Andrej Karpathy, Let’s build GPT: from scratch, in code, spelled out., (Jan. 17, 2023). Accessed: Jul. 23, 2024. [Online Video]. Available: https://www.youtube.com/watch?v=kCc8FmEb1nY\n",
     "\n",
-    "[5] Erdem (burnpiro), Kemal. “Understanding Positional Encoding in Transformers.” Medium, 13 May 2021, https://towardsdatascience.com/understanding-positional-encoding-in-transformers-dc6bafc021ab.\n",
+    "[5] K. Erdem (burnpiro), “Understanding Positional Encoding in Transformers,” Medium. Accessed: Jul. 23, 2024. [Online]. Available: https://towardsdatascience.com/understanding-positional-encoding-in-transformers-dc6bafc021ab\n",
     "\n",
-    "[6] Gupta, Yashu. “Chat GPT and GPT 3 Detailed Architecture Study-Deep NLP Horse.” Nerd For Tech, 16 Mar. 2023, https://medium.com/nerd-for-tech/gpt3-and-chat-gpt-detailed-architecture-study-deep-nlp-horse-db3af9de8a5d.\n",
+    "[6] Y. Gupta, “Chat GPT and GPT 3 Detailed Architecture Study-Deep NLP Horse,” Nerd For Tech. Accessed: Jul. 23, 2024. [Online]. Available: https://medium.com/nerd-for-tech/gpt3-and-chat-gpt-detailed-architecture-study-deep-nlp-horse-db3af9de8a5d\n",
     "\n",
+    "[7] “nanoGPT” GitHub. Accessed: Jul. 23, 2024. [Online]. Available: https://github.com/karpathy/nanoGPT \n",
     "\n",
-    "[7] Karpathy, Andrej. “nanoGPT.” Github, https://github.com/karpathy/nanoGPT. Accessed 17 July 2024.\n",
+    "[8] “ng-video-lecture/gpt.py at master · karpathy/ng-video-lecture,” GitHub. Accessed: Jul. 23, 2024. [Online]. Available: https://github.com/karpathy/ng-video-lecture/blob/master/gpt.py\n",
     "\n",
+    "[9] “Let’s Read: Transformer Models, Part 2,” A Trivial Knot. Accessed: Jul. 23, 2024. [Online]. Available: https://freethoughtblogs.com/atrivialknot/2024/01/07/lets-read-transformer-models-part-2/\n",
     "\n",
-    "[8] Karpathy, Andrej. “Ng-Video-Lecture/Gpt.Py at Master · Karpathy/Ng-Video-Lecture.” GitHub, https://github.com/karpathy/ng-video-lecture/blob/master/gpt.py. Accessed 17 July 2024.\n",
+    "[10] Stanford Online, Stanford XCS224U: NLU I Contextual Word Representations, Part 3: Positional Encoding I Spring 2023, (Aug. 17, 2023). Accessed: Jul. 23, 2024. [Online Video]. Available: https://www.youtube.com/watch?v=JERXX2Byr90\n",
     "\n",
-    "[9] “Let’s Read: Transformer Models, Part 2.” A Trivial Knot, 7 Jan. 2024, https://freethoughtblogs.com/atrivialknot/2024/01/07/lets-read-transformer-models-part-2/.\n",
+    "[11] StatQuest with Josh Starmer, Transformer Neural Networks, ChatGPT’s foundation, Clearly Explained!!!, (Jul. 23, 2023). Accessed: Jul. 23, 2024. [Online Video]. Available: https://www.youtube.com/watch?v=zxQyTK8quyY\n",
     "\n",
-    "[10] Stanford Online. Stanford XCS224U: NLU I Contextual Word Representations, Part 3: Positional Encoding I Spring 2023. 2023. YouTube, https://www.youtube.com/watch?v=JERXX2Byr90.\n",
-    "\n",
-    "[11] StatQuest with Josh Starmer. Transformer Neural Networks, ChatGPT’s Foundation, Clearly Explained!!! 2023. YouTube, https://www.youtube.com/watch?v=zxQyTK8quyY.\n",
-    "\n",
-    "[12] Vaswani, Ashish, et al. Attention Is All You Need. arXiv:1706.03762, arXiv, 1 Aug. 2023. arXiv.org, https://doi.org/10.48550/arXiv.1706.03762.\n"
+    "[12] A. Vaswani et al., “Attention Is All You Need,” 2017, doi: 10.48550/ARXIV.1706.03762.\n",
+    "\n"
    ]
   },
   {
