--- a/notebooks/NeuralNetworks/DataManipulation.ipynb
+++ b/notebooks/NeuralNetworks/DataManipulation.ipynb
@@ -2547,13 +2547,13 @@
     "id": "vW9gND485pXx"
    },
    "source": [
-    "[1] Buolamwini, Joy and Timnit Gebru. Gender Shades: Intersectional Accuracy Disparities in Commercial Gender Classification.  Conference on Fairness, Accountability, and Transparency, 2018. https://proceedings.mlr.press/v81/buolamwini18a/buolamwini18a.pdf.\n",
+    "[1] J. Buolamwini, “Gender Shades: Intersectional Accuracy Disparities in Commercial Gender Classification,” MIT Media Lab. Accessed: Jul. 23, 2024. [Online]. Available: https://www.media.mit.edu/publications/gender-shades-intersectional-accuracy-disparities-in-commercial-gender-classification/\n",
     "\n",
-    "[2] Buolamwini, Joy. How I’m Fighting Bias in Algorithms. 1489075733. www.ted.com, https://www.ted.com/talks/joy_buolamwini_how_i_m_fighting_bias_in_algorithms.\n",
+    "[2] J. Buolamwini, How I’m fighting bias in algorithms, (1489075733). Accessed: Jul. 23, 2024. [Online Video]. Available: https://www.ted.com/talks/joy_buolamwini_how_i_m_fighting_bias_in_algorithms\n",
     "\n",
-    "[3] Cataleta, Maria Stefania. Humane Artificial Intelligence: The Fragility of Human Rights Facing AI. East-West Center, 2020. JSTOR, https://www.jstor.org/stable/resrep25514.\n",
+    "[3] M. S. Cataleta, “Humane Artificial Intelligence: The Fragility of Human Rights Facing AI,” East-West Center, 2020. Accessed: Jul. 23, 2024. [Online]. Available: https://www.jstor.org/stable/resrep25514\n",
     "\n",
-    "[4] “The Perpetual Line-Up.” Perpetual Line Up, https://www.perpetuallineup.org/. Accessed 10 June 2024."
+    "[4] “The Perpetual Line-Up,” Perpetual Line Up. Accessed: Jul. 23, 2024. [Online]. Available: https://www.perpetuallineup.org/"
    ]
   }
  ],
