--- a/notebooks/Robotics/Subsumption.ipynb
+++ b/notebooks/Robotics/Subsumption.ipynb
@@ -11,18 +11,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "1e63bb3e",
-   "metadata": {
-    "id": "1e63bb3e"
-   },
-   "outputs": [],
-   "source": [
-    "%pip install aitk --upgrade --quiet"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3756de1d",
    "metadata": {
@@ -36,6 +24,18 @@
     "The Sumbumption Architecture is based on a hierarchical set of layers. Each layer focuses on the relevant sensors for its task and commands the actuators needed to achieve its goal. Each layer competes to control the robot at any given time step, and the one with the highest priority is given control, subsuming control from all lower layers. This framework is known for its real-time responsiveness, and can quickly adapt to changing conditions in the environment.\n",
     "\n",
     "In this notebook we will use Subsumption Architecture to control a robot with both light and range sensors, to wander its environment to find and approach a light source."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1e63bb3e",
+   "metadata": {
+    "id": "1e63bb3e"
+   },
+   "outputs": [],
+   "source": [
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -616,7 +616,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
