--- a/notebooks/Robotics/WhatIsItLikeToBeARobot.ipynb
+++ b/notebooks/Robotics/WhatIsItLikeToBeARobot.ipynb
@@ -8,17 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "AQMTpw5e_0cx"
-   },
-   "outputs": [],
-   "source": [
-    "%pip install aitk --upgrade --quiet"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -42,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -460,9 +449,11 @@
    "source": [
     "## References\n",
     "\n",
-    "1. https://en.wikipedia.org/wiki/What_Is_It_Like_to_Be_a_Bat\n",
-    "2. https://en.wikipedia.org/wiki/Umwelt\n",
-    "3. https://en.wikipedia.org/wiki/Embodied_embedded_cognition"
+    "[1] “What Is It Like to Be a Bat?,” Wikipedia. Jun. 14, 2024. Available: https://en.wikipedia.org/w/index.php?title=What_Is_It_Like_to_Be_a_Bat%3F&oldid=1229032361. [Accessed: Jul. 23, 2024]\n",
+    "\n",
+    "[2] “Umwelt,” Wikipedia. Feb. 19, 2024. Available: https://en.wikipedia.org/w/index.php?title=Umwelt&oldid=1208855460. [Accessed: Jul. 23, 2024]\n",
+    "\n",
+    "[3] “Embodied embedded cognition,” Wikipedia. Sep. 26, 2023. Available: https://en.wikipedia.org/w/index.php?title=Embodied_embedded_cognition&oldid=1177186195. [Accessed: Jul. 23, 2024]\n"
    ]
   },
   {
