--- a/notebooks/Advanced/DogsVsCats.ipynb
+++ b/notebooks/Advanced/DogsVsCats.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
