--- a/notebooks/Advanced/EncoderNetwork.ipynb
+++ b/notebooks/Advanced/EncoderNetwork.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -1854,7 +1854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1868,7 +1868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
