--- a/notebooks/Advanced/FunWithLight.ipynb
+++ b/notebooks/Advanced/FunWithLight.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
