--- a/notebooks/Advanced/NNRobotLab.ipynb
+++ b/notebooks/Advanced/NNRobotLab.ipynb
@@ -37,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
