--- a/notebooks/Advanced/StringGA.ipynb
+++ b/notebooks/Advanced/StringGA.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
