--- a/notebooks/Robotics/DemoRobots.ipynb
+++ b/notebooks/Robotics/DemoRobots.ipynb
@@ -438,7 +438,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
