--- a/notebooks/Robotics/SeekLight.ipynb
+++ b/notebooks/Robotics/SeekLight.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install aitk --upgrade --quiet"
+    "%pip install aitk --quiet"
    ]
   },
   {
@@ -541,7 +541,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
