Slight changes and clarifications

--- a/notebooks/GenerativeAI/WordEmbedding.ipynb
+++ b/notebooks/GenerativeAI/WordEmbedding.ipynb
@@ -102,7 +102,7 @@
         }
       ],
       "source": [
-        "#@title <sub><sup>**Run this cell to load our language into Python**\n",
+        "#@title <sub><sup>**Run this cell to load our language into Python (Note: you can click the *Hide code* button to the left to minimize the code below.)**\n",
         "\n",
         "categories = {\n",
         "    \"NOUN-ANIMATE\": [\"tarzan\", \"jane\", \"boy\", \"cheetah\", \"chimp\", \"rhino\"],\n",
@@ -498,7 +498,7 @@
         "id": "_K-GXjrvvfnC"
       },
       "source": [
-        "**What we ultimately want is different from what we're training the model to do.** We don't actually care about how good the model is at classifying positive vs negative pairs; it's a proxy task that leads the model to arrange the embeddings in the way we described. After training, we'll simply extract the embeddings that the model has learned and evaluate them directly."
+        "**What we ultimately want is different from what we're training the model to do.** We don't actually care about how good the model is at classifying positive vs negative pairs; it's a proxy task that leads the model to arrange the embeddings in the way we described based on the text we gave it. After training, we'll simply extract the embeddings that the model has learned and evaluate them directly. <sup>(If you've done our Intro to Neural Networks notebook or know standard practices in ML, this is why we aren't worrying about overfitting per se, nor using a validation/test set.)"
       ]
     },
     {
@@ -962,15 +962,15 @@
         "# Learning Bias\n",
         "So we've seen that word embedding algorithms like word2vec do an impressive job of learning to represent the \"meanings\" of words from their associations with other words in text. But what happens when some of those associations are problematic, biased, or prejudicial?\n",
         "\n",
-        "In July 2016, Bolukbasi et al. published [Man is to Computer Programmer as Woman is to Homemaker? Debiasing Word Embeddings](https://arxiv.org/pdf/1607.06520) [2]. In the paper they inspect the embeddings produced by w2vNEWS, a word2vec model which was trained on thousands of Google News articles. Using several different techniques, they exposed how inappropriate gender stereotypes were encoded in these embeddings.\n",
+        "In July 2016, Bolukbasi et al. published [Man is to Computer Programmer as Woman is to Homemaker? Debiasing Word Embeddings](https://arxiv.org/pdf/1607.06520) [2]. In the paper they inspect the embeddings produced by w2vNEWS, a word2vec model which was trained on thousands of Google News articles. Using several different techniques, they showed that these embeddings had encoded inappropriate gender stereotypes.\n",
         "\n",
         "For example, they projected dozens of embeddings onto the *she*-*he* axis -- the line connecting the embedding for \"she\" to the embedding for \"he\" -- to see where they lay. Some definitionally gendered words, like *sisters* or *boyhood*, were situated as expected, nearer to *she* and *he* respectively. However, many words that are not definitionally gendered were also skewed towards one or the other. For example, *homemaker*, *nurse*, and *beautiful* were significantly closer to *she*; while *genius*, *command*, and *philosopher* were closer to *he*.\n",
         "\n",
         "They also analyzed directions in the embedding space to find gendered pairs of words. By subtracting the embeddings *woman-man* to approximate a \"male-to-female step\" in the embedding space, they found for example that *king + (woman-man)* landed very near to the embedding *queen*, as expected. But troublingly, *computer_programmer + (woman-man)* landed near *homemaker*, and *comical + (woman-man)* landed near *hysterical*. The full paper lists hundreds of these pairs, some more problematic than others.\n",
         "\n",
-        "This isn't surprising. A word embedding algorithm's job is to extract all the associations they can from what they're fed. They aren't equipped to determine whether those associations should be learned in the first place. w2vNEWS' problematic embeddings only reflect problematic associations present (however subtly) in the news articles it was trained on. Word embeddings are a black mirror.\n",
+        "This isn't surprising. A word embedding algorithm's job is to extract all the associations they can from what they're fed. They aren't equipped to determine whether those associations should be learned in the first place. w2vNEWS' problematic embeddings straightforwardly reflect problematic associations present (however subtly) in the news articles it was trained on.\n",
         "\n",
-        "In w2vNEWS' case, this wasn't irreparable: the paper itself outlines how they successfully managed to remove these biases from the w2vNEWS embeddings while preserving their general usefulness. But this problem of bias isn't restricted to word embeddings. All language models pick up on the associations in the language they're trained on, and trying to rectify them, when it comes to large models like GPT-4 -- which are *far* more complex than word2vec, and comparatively poorly understood -- remains an open area of research."
+        "In w2vNEWS' case, this wasn't irreparable: the paper itself outlines methods the authors used to successfully correct these biases in the w2vNEWS embeddings while preserving their general usefulness. But this problem of bias isn't restricted to word embeddings. All language models pick up on the associations in the text they're trained on; and trying to rectify them, when it comes to large models like GPT-4 -- which are *far* more complex than word2vec, and comparatively poorly understood -- remains a difficult but urgent area of research."
       ]
     },
     {
@@ -987,15 +987,6 @@
       "metadata": {
         "id": "_W1amPzKCDoZ"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "44KcG-btCOLE"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
