finished some repo changes

--- a/notebooks/GenerativeAI/NanoGPT.ipynb
+++ b/notebooks/GenerativeAI/NanoGPT.ipynb
@@ -176,7 +176,7 @@
     "id": "Iyi9SloX5AjQ"
    },
    "source": [
-    "Let's see how many letters there are in the combined texts of all of Shakespear's plays."
+    "Let's see how many letters there are in the combined texts of all of Shakespeare's plays."
    ]
   },
   {
