--- a/notebooks/NeuralNetworks/CategorizingFaces.ipynb
+++ b/notebooks/NeuralNetworks/CategorizingFaces.ipynb
@@ -283,7 +283,7 @@
     "id": "LwBajXAKn0jg"
    },
    "source": [
-    "Here are the first 10 images from the glasses dataset."
+    "Here are the first 10 images from the glasses dataset. The display will show images of people's faces, alternating with and without sunglasses."
    ]
   },
   {
@@ -2160,7 +2160,7 @@
     "id": "-1NOGWPr7JpY"
    },
    "source": [
-    "Here are the first 10 images from the directions dataset."
+    "Here are the first 10 images from the directions dataset. It should show several images of a feminine presenting person with varying facial expressions. "
    ]
   },
   {
