Added: putting the buttons to a different place

--- a/notebooks/GenerativeAI/NanoGPT.ipynb
+++ b/notebooks/GenerativeAI/NanoGPT.ipynb
@@ -1257,8 +1257,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "tags": [],
-        "id": "NbtekiGna7yc"
+        "id": "NbtekiGna7yc",
+        "tags": []
       },
       "source": [
         "### Note"
@@ -1296,17 +1296,10 @@
         "id": "hjShvxDKNlRq"
       },
       "source": [
-        "To learn more about transformer in more details, you can check out our notebook on transformers <a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/GenerativeAI/Transformer.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "To learn more about transformer in more details, you can check out our notebook on transformers \n",
+        "\n",
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/ArtificialIntelligenceToolkit/aitk/blob/master/notebooks/GenerativeAI/Transformer.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "fCJ5me7C-FQp"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
